improved game join and user privileges